Fix image grid being too wide

--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ main {
 
 .image-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
     grid-gap: 0.5rem;
 }
 
